# DRFReview

./: pyproject.toml
app/config/: settings.py  urls.py
app/members/: admin.py  apis.py  serializers.py  urls.py
app/members/migrations/: 0001_initial.py
app/snippets/: models.py  permissions.py  serializers.py
app/snippets/apis/: cbv_apiview.py  cbv_generic.py  cbv_mixins.py  fbv.py  fbv_v1.py  fbv_v2.py
app/snippets/migrations/: 0001_initial.py
app/snippets/serializers/: baseserializer.py  modelserializer.py
app/snippets/urls/: cbv_urls_apiview.py  cbv_urls_generic.py  cbv_urls_mixins.py  fbv_urls_v1.py  fbv_urls_v2.py  fbvurls.py
