[tool.poetry]
name = "DRF-REVIEW"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
pygments = "^2.6.1"
drf-yasg = "^1.17.1"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
django-extensions = "^2.2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
